After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723839 - audioscrobbler: Invalid path passed to g_settings_new_with_path()
audioscrobbler: Invalid path passed to g_settings_new_with_path()
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-07 11:21 UTC by Kalev Lember
Modified: 2014-02-07 12:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
audioscrobbler: Make sure gsettings schema path ends with a slash (2.01 KB, patch)
2014-02-07 11:41 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2014-02-07 11:21:35 UTC
On my rawhide system, rhythmbox 3.0.1 crashes on startup after spewing a number of criticals. The first one is in audioscrobbler plugin code:

GLib-GIO-CRITICAL **: g_settings_new_with_path: assertion 'path_is_valid (path)' failed

Program received signal SIGTRAP, Trace/breakpoint trap.
g_logv (log_domain=0x7ffff129fb38 "GLib-GIO", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffc5a0) at gmessages.c:1038
1038		  g_private_set (&g_log_depth, GUINT_TO_POINTER (depth));

(gdb) bt
  • #0 g_logv
    at gmessages.c line 1038
  • #1 g_log
    at gmessages.c line 1071
  • #2 g_return_if_fail_warning
  • #3 g_settings_new_with_path
    at gsettings.c line 904
  • #4 rb_audioscrobbler_plugin_init
    at rb-audioscrobbler-plugin.c line 108


This seems to be because the schema path (/org/gnome/rhythmbox/plugins/audioscrobbler/Last.fm) doesn't end with a slash. From g_settings_new_with_path() docs: "It is a programmer error if path is not a valid path. A valid path begins and ends with '/' and does not contain two consecutive '/' characters."
Comment 1 Kalev Lember 2014-02-07 11:41:38 UTC
Created attachment 268393 [details] [review]
audioscrobbler: Make sure gsettings schema path ends with a slash

This fixes criticals complaining about invalid path passed to
g_settings_new_with_path() at plugin startup.
Comment 2 Kalev Lember 2014-02-07 11:45:18 UTC
The patch above fixes the audioscrobbler criticals I was seeing. It doesn't actually fix the startup crash though, which was unrelated to the gsettings criticals and something in the daap plugin instead.
Comment 3 Jonathan Matthew 2014-02-07 11:51:42 UTC
Review of attachment 268393 [details] [review]:

sure
Comment 4 Kalev Lember 2014-02-07 12:07:03 UTC
Thanks!

Attachment 268393 [details] pushed as 8cf18a3 - audioscrobbler: Make sure gsettings schema path ends with a slash