audioscrobbler: Make sure gsettings schema path ends with a slash

This fixes criticals complaining about invalid path passed to
g_settings_new_with_path() at plugin startup.

https://bugzilla.gnome.org/show_bug.cgi?id=723839